--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -5898,7 +5898,7 @@ Second Chronopic to platforms.</property>
                                                         <property name="can_focus">False</property>
                                                         <property name="label" translatable="yes">Test options</property>
                                                         <attributes>
-                                                         <attribute name="weight" value="bold"/>
+                                                          <attribute name="weight" value="bold"/>
                                                         </attributes>
                                                       </widget>
                                                       <packing>
@@ -11851,7 +11851,7 @@ Second Chronopic to platforms.</property>
                                                     <property name="can_focus">False</property>
                                                     <property name="label" translatable="yes">Graph and report</property>
                                                     <attributes>
-                                                     <attribute name="weight" value="bold"/>
+                                                      <attribute name="weight" value="bold"/>
                                                     </attributes>
                                                   </widget>
                                                   <packing>
@@ -12986,7 +12986,7 @@ on current Chronojump version.</property>
                                                     <property name="vscrollbar_policy">automatic</property>
                                                     <property name="shadow_type">etched-in</property>
                                                     <child>
-                                                      <widget class="GtkTreeView" id="treeview_encoder_curves">
+                                                      <widget class="GtkTreeView" id="treeview_encoder_capture_curves">
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">True</property>
                                                         <property name="rules_hint">True</property>
@@ -13734,57 +13734,122 @@ on current Chronojump version.</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkHBox" id="hbox_image_encoder_analyze">
+                                          <widget class="GtkVBox" id="vbox_analyze_results">
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <child>
-                                              <widget class="GtkViewport" id="viewport_image_encoder_analyze">
+                                              <widget class="GtkNotebook" id="notebook_analyze_results">
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">False</property>
-                                                <property name="resize_mode">queue</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="tab_pos">bottom</property>
+                                                <property name="show_border">False</property>
                                                 <child>
-                                                  <widget class="GtkImage" id="image_encoder_analyze">
+                                                  <widget class="GtkHBox" id="hbox_image_encoder_analyze">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
-                                                    <property name="stock">gtk-missing-image</property>
-                                                    <property name="icon-size">6</property>
+                                                    <child>
+                                                      <widget class="GtkViewport" id="viewport_image_encoder_analyze">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">False</property>
+                                                        <property name="resize_mode">queue</property>
+                                                        <child>
+                                                          <widget class="GtkImage" id="image_encoder_analyze">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="stock">gtk-missing-image</property>
+                                                            <property name="icon-size">6</property>
+                                                          </widget>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">True</property>
+                                                        <property name="fill">True</property>
+                                                        <property name="position">0</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkVBox" id="vbox89">
+                                                        <property name="can_focus">False</property>
+                                                        <child>
+                                                          <widget class="GtkButton" id="button_encoder_analyze_zoom">
+                                                            <property name="can_focus">True</property>
+                                                            <property name="receives_default">True</property>
+                                                            <property name="use_action_appearance">False</property>
+                                                            <accelerator key="z" signal="clicked"/>
+                                                            <child>
+                                                            <widget class="GtkImage" id="image_encoder_analyze_zoom">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            </widget>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="fill">True</property>
+                                                            <property name="pack_type">end</property>
+                                                            <property name="position">0</property>
+                                                          </packing>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="fill">True</property>
+                                                        <property name="position">1</property>
+                                                      </packing>
+                                                    </child>
                                                   </widget>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkLabel" id="label114">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">False</property>
+                                                    <property name="label" translatable="yes">Show graph</property>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="tab_fill">False</property>
+                                                    <property name="type">tab</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkScrolledWindow" id="scrolledwindow_encoder_analyze_curves">
+                                                    <property name="width_request">200</property>
+                                                    <property name="height_request">175</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="hscrollbar_policy">automatic</property>
+                                                    <property name="vscrollbar_policy">automatic</property>
+                                                    <property name="shadow_type">etched-in</property>
+                                                    <child>
+                                                      <widget class="GtkTreeView" id="treeview_encoder_analyze_curves">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">True</property>
+                                                        <property name="rules_hint">True</property>
+                                                        <property name="enable_search">False</property>
+                                                        <property name="show_expanders">False</property>
+                                                      </widget>
+                                                    </child>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkLabel" id="label116">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">False</property>
+                                                    <property name="label" translatable="yes">Show table</property>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="position">1</property>
+                                                    <property name="tab_fill">False</property>
+                                                    <property name="type">tab</property>
+                                                  </packing>
                                                 </child>
                                               </widget>
                                               <packing>
                                                 <property name="expand">True</property>
                                                 <property name="fill">True</property>
                                                 <property name="position">0</property>
-                                              </packing>
-                                            </child>
-                                            <child>
-                                              <widget class="GtkVBox" id="vbox43">
-                                                <property name="can_focus">False</property>
-                                                <child>
-                                                  <widget class="GtkButton" id="button_encoder_analyze_zoom">
-                                                    <property name="can_focus">True</property>
-                                                    <property name="receives_default">True</property>
-                                                    <property name="use_action_appearance">False</property>
-                                                    <accelerator key="z" signal="clicked"/>
-                                                    <child>
-                                                      <widget class="GtkImage" id="image_encoder_analyze_zoom">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">False</property>
-                                                      </widget>
-                                                    </child>
-                                                  </widget>
-                                                  <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">True</property>
-                                                    <property name="pack_type">end</property>
-                                                    <property name="position">0</property>
-                                                  </packing>
-                                                </child>
-                                              </widget>
-                                              <packing>
-                                                <property name="expand">False</property>
-                                                <property name="fill">True</property>
-                                                <property name="position">1</property>
                                               </packing>
                                             </child>
                                           </widget>
@@ -14701,7 +14766,7 @@ Evaluator can use real name or nickname.</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Select your connection</property>
                     <attributes>
-                     <attribute name="weight" value="bold"/>
+                      <attribute name="weight" value="bold"/>
                     </attributes>
                   </widget>
                   <packing>
