Propulsive check on analyze(distinct than capture)

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12386,7 +12386,7 @@ on current Chronojump version.</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <widget class="GtkCheckButton" id="checkbutton_encoder_propulsive">
+                                                            <widget class="GtkCheckButton" id="checkbutton_encoder_capture_propulsive">
                                                             <property name="label" translatable="yes">Propulsive</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
@@ -13584,6 +13584,24 @@ on current Chronojump version.</property>
                                                           </packing>
                                                         </child>
                                                         <child>
+                                                          <widget class="GtkCheckButton" id="checkbutton_encoder_analyze_propulsive">
+                                                            <property name="label" translatable="yes">P.</property>
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="receives_default">False</property>
+                                                            <property name="has_tooltip">True</property>
+                                                            <property name="tooltip" translatable="yes">On concentric evaluate only propulsive phase</property>
+                                                            <property name="use_action_appearance">False</property>
+                                                            <property name="active">True</property>
+                                                            <property name="draw_indicator">True</property>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="fill">False</property>
+                                                            <property name="position">1</property>
+                                                          </packing>
+                                                        </child>
+                                                        <child>
                                                           <widget class="GtkHBox" id="hbox_encoder_analyze_curve_num">
                                                             <property name="can_focus">False</property>
                                                             <property name="spacing">6</property>
@@ -13617,7 +13635,7 @@ on current Chronojump version.</property>
                                                           <packing>
                                                             <property name="expand">False</property>
                                                             <property name="fill">False</property>
-                                                            <property name="position">1</property>
+                                                            <property name="position">2</property>
                                                           </packing>
                                                         </child>
                                                         <child>
@@ -13630,7 +13648,7 @@ on current Chronojump version.</property>
                                                           <packing>
                                                             <property name="expand">False</property>
                                                             <property name="fill">False</property>
-                                                            <property name="position">2</property>
+                                                            <property name="position">3</property>
                                                           </packing>
                                                         </child>
                                                         <child>
@@ -13677,7 +13695,7 @@ on current Chronojump version.</property>
                                                           <packing>
                                                             <property name="expand">False</property>
                                                             <property name="fill">False</property>
-                                                            <property name="position">3</property>
+                                                            <property name="position">4</property>
                                                           </packing>
                                                         </child>
                                                         <child>
@@ -13690,7 +13708,7 @@ on current Chronojump version.</property>
                                                           <packing>
                                                             <property name="expand">False</property>
                                                             <property name="fill">False</property>
-                                                            <property name="position">4</property>
+                                                            <property name="position">5</property>
                                                           </packing>
                                                         </child>
                                                       </widget>
