--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -31326,8 +31326,8 @@ suitable for agility tests and RSA)</property>
     </child>
   </widget>
   <widget class="GtkWindow" id="session_load">
-    <property name="width_request">600</property>
-    <property name="height_request">350</property>
+    <property name="width_request">650</property>
+    <property name="height_request">400</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="border_width">10</property>
@@ -31341,6 +31341,52 @@ suitable for agility tests and RSA)</property>
         <property name="can_focus">False</property>
         <property name="spacing">8</property>
         <child>
+          <widget class="GtkHBox" id="hbox1">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="spacing">12</property>
+            <child>
+              <widget class="GtkCheckButton" id="checkbutton_show_data_encoder">
+                <property name="label" translatable="yes">Show data of encoder tests</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="use_action_appearance">False</property>
+                <property name="draw_indicator">True</property>
+                <signal name="toggled" handler="on_checkbutton_show_data_encoder_toggled" swapped="no"/>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="pack_type">end</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkCheckButton" id="checkbutton_show_data_jump_run">
+                <property name="label" translatable="yes">Show data of jump and run tests</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="use_action_appearance">False</property>
+                <property name="draw_indicator">True</property>
+                <signal name="toggled" handler="on_checkbutton_show_data_jump_run_toggled" swapped="no"/>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="pack_type">end</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
           <widget class="GtkScrolledWindow" id="scrolledwindow5">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
@@ -31348,6 +31394,7 @@ suitable for agility tests and RSA)</property>
               <widget class="GtkTreeView" id="treeview_session_load">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="has_focus">True</property>
                 <property name="enable_search">False</property>
                 <signal name="row_activated" handler="on_row_double_clicked" swapped="no"/>
               </widget>
@@ -31356,7 +31403,7 @@ suitable for agility tests and RSA)</property>
           <packing>
             <property name="expand">True</property>
             <property name="fill">True</property>
-            <property name="position">0</property>
+            <property name="position">1</property>
           </packing>
         </child>
         <child>
@@ -31402,7 +31449,7 @@ suitable for agility tests and RSA)</property>
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="position">1</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </widget>
