--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12118,9 +12118,6 @@ on current Chronojump version.</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <placeholder/>
-                                                            </child>
-                                                            <child>
                                                             <widget class="GtkSpinButton" id="spin_encoder_extra_weight">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
@@ -12142,6 +12139,9 @@ on current Chronojump version.</property>
                                                             <property name="bottom_attach">2</property>
                                                             <property name="x_options">GTK_FILL</property>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                           </widget>
                                                           <packing>
@@ -13663,17 +13663,23 @@ on current Chronojump version.</property>
                                                     </child>
                                                     <child>
                                                       <widget class="GtkVBox" id="vbox89">
+                                                        <property name="visible">True</property>
                                                         <property name="can_focus">False</property>
                                                         <child>
-                                                          <widget class="GtkButton" id="button_encoder_analyze_zoom">
+                                                          <widget class="GtkButton" id="button_encoder_analyze_image_save">
+                                                            <property name="visible">True</property>
+                                                            <property name="sensitive">False</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="use_action_appearance">False</property>
+                                                            <signal name="clicked" handler="on_button_encoder_analyze_image_save_clicked" swapped="no"/>
                                                             <accelerator key="z" signal="clicked"/>
                                                             <child>
-                                                            <widget class="GtkImage" id="image_encoder_analyze_zoom">
+                                                            <widget class="GtkImage" id="image_encoder_analyze_image_save">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="tooltip" translatable="yes">Save image</property>
+                                                            <property name="stock">gtk-save</property>
                                                             </widget>
                                                             </child>
                                                           </widget>
