Encoder save curves table done.

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -13717,6 +13717,7 @@ on current Chronojump version.</property>
                                                             <property name="sensitive">False</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">True</property>
+                                                            <property name="tooltip" translatable="yes">Save image</property>
                                                             <property name="use_action_appearance">False</property>
                                                             <signal name="clicked" handler="on_button_encoder_analyze_image_save_clicked" swapped="no"/>
                                                             <accelerator key="z" signal="clicked"/>
@@ -13724,7 +13725,6 @@ on current Chronojump version.</property>
                                                             <widget class="GtkImage" id="image_encoder_analyze_image_save">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="tooltip" translatable="yes">Save image</property>
                                                             <property name="stock">gtk-save</property>
                                                             </widget>
                                                             </child>
@@ -13757,22 +13757,69 @@ on current Chronojump version.</property>
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <widget class="GtkScrolledWindow" id="scrolledwindow_encoder_analyze_curves">
-                                                    <property name="width_request">200</property>
-                                                    <property name="height_request">175</property>
+                                                  <widget class="GtkHBox" id="hbox83">
                                                     <property name="visible">True</property>
-                                                    <property name="can_focus">True</property>
-                                                    <property name="hscrollbar_policy">automatic</property>
-                                                    <property name="vscrollbar_policy">automatic</property>
-                                                    <property name="shadow_type">etched-in</property>
+                                                    <property name="can_focus">False</property>
                                                     <child>
-                                                      <widget class="GtkTreeView" id="treeview_encoder_analyze_curves">
+                                                      <widget class="GtkScrolledWindow" id="scrolledwindow_encoder_analyze_curves">
+                                                        <property name="width_request">200</property>
+                                                        <property name="height_request">175</property>
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">True</property>
-                                                        <property name="rules_hint">True</property>
-                                                        <property name="enable_search">False</property>
-                                                        <property name="show_expanders">False</property>
+                                                        <property name="hscrollbar_policy">automatic</property>
+                                                        <property name="vscrollbar_policy">automatic</property>
+                                                        <property name="shadow_type">etched-in</property>
+                                                        <child>
+                                                          <widget class="GtkTreeView" id="treeview_encoder_analyze_curves">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="rules_hint">True</property>
+                                                            <property name="enable_search">False</property>
+                                                            <property name="show_expanders">False</property>
+                                                          </widget>
+                                                        </child>
                                                       </widget>
+                                                      <packing>
+                                                        <property name="expand">True</property>
+                                                        <property name="fill">True</property>
+                                                        <property name="position">0</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkVBox" id="vbox90">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">False</property>
+                                                        <child>
+                                                          <widget class="GtkButton" id="button_encoder_analyze_table_save">
+                                                            <property name="visible">True</property>
+                                                            <property name="sensitive">False</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="receives_default">True</property>
+                                                            <property name="tooltip" translatable="yes">Save table</property>
+                                                            <property name="use_action_appearance">False</property>
+                                                            <signal name="clicked" handler="on_button_encoder_analyze_table_save_clicked" swapped="no"/>
+                                                            <accelerator key="z" signal="clicked"/>
+                                                            <child>
+                                                            <widget class="GtkImage" id="image_encoder_analyze_image_save1">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="stock">gtk-save</property>
+                                                            </widget>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="fill">True</property>
+                                                            <property name="pack_type">end</property>
+                                                            <property name="position">0</property>
+                                                          </packing>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="fill">False</property>
+                                                        <property name="position">1</property>
+                                                      </packing>
                                                     </child>
                                                   </widget>
                                                   <packing>
